make object with file_columns serializable/dumpable
git-svn-id: http://opensvn.csie.org/rails_file_column/plugins/file_column/trunk@18 6a5db2c9-b104-0410-84e5-917aad89f9d9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+*svn*
+    * make object with file_columns serializable
+
 0.3
     * fixed bug where empty file uploads were not recognized with some browsers
     * fixed bug on windows when "file" utility is not present
