--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
-*svn*
+0.3.1
     * make object with file_columns serializable
+    * use normal require for RMagick, so that it works with gem
+      and custom install as well
 
 0.3
     * fixed bug where empty file uploads were not recognized with some browsers
