use subdirs for versions instead of fiddling with filenames
git-svn-id: http://opensvn.csie.org/rails_file_column/plugins/file_column/trunk@30 6a5db2c9-b104-0410-84e5-917aad89f9d9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 *svn*
     * allow for directories in file_column dirs as well
+    * use subdirs for versions instead of fiddling with filename
 
 0.3.1
     * make object with file_columns serializable
