--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 *svn*
     * allow for directories in file_column dirs as well
     * use subdirs for versions instead of fiddling with filename
+    * implemented dynamic resizing of images from views
 
 0.3.1
     * make object with file_columns serializable
