* do not require instance variables for url_for_file_column * added tests for file_column_helper
git-svn-id: http://opensvn.csie.org/rails_file_column/plugins/file_column/trunk@36 6a5db2c9-b104-0410-84e5-917aad89f9d9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,9 @@
     * use subdirs for versions instead of fiddling with filename
     * implemented dynamic resizing of images from views
     * new "crop" feature [Sean Treadway]
+    * do not require model objects to be stored in instance variable in
+      url_for_file_column helper
+
 0.3.1
     * make object with file_columns serializable
     * use normal require for RMagick, so that it works with gem
