--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,11 @@
 *svn*
     * allow for directories in file_column dirs as well
     * use subdirs for versions instead of fiddling with filename
-    * implemented dynamic resizing of images from views
+    * url_for_image_column_helper for dynamic resizing of images from views
     * new "crop" feature [Sean Treadway]
-    * do not require model objects to be stored in instance variable in
-      url_for_file_column helper
+    * url_for_file_column helper: do not require model objects to be stored in
+      instance variables
+      
 
 0.3.1
     * make object with file_columns serializable
