updated todo list
git-svn-id: http://opensvn.csie.org/rails_file_column/plugins/file_column/trunk@39 6a5db2c9-b104-0410-84e5-917aad89f9d9

--- a/TODO
+++ b/TODO
@@ -2,7 +2,4 @@
 * support setting of permissions
 * validation methods for file format/size
 * delete stale files from tmp directories
-* move image scaling into views
-* refactor to store options in class attributes, so that we
-  can use procs again
-
+* integrate :store_dir callback patch
