implemented store-dir-callbacks
git-svn-id: http://opensvn.csie.org/rails_file_column/plugins/file_column/trunk@40 6a5db2c9-b104-0410-84e5-917aad89f9d9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,7 +5,8 @@
     * new "crop" feature [Sean Treadway]
     * url_for_file_column helper: do not require model objects to be stored in
       instance variables
-      
+    * allow more fined-grained control over :store_dir via callback
+      methods [Gerret Apelt]
 
 0.3.1
     * make object with file_columns serializable
