added validates_image_size validation
git-svn-id: http://opensvn.csie.org/rails_file_column/plugins/file_column/trunk@48 6a5db2c9-b104-0410-84e5-917aad89f9d9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,7 @@
       methods [Gerret Apelt]
     * allow assignment of regular file objects
     * validation of file format and file size [Kyle Maxwell]
+    * validation of image dimensions [Lee O'Mara]
 
 0.3.1
     * make object with file_columns serializable
