--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@
 * validation methods for file format/size
 * delete stale files from tmp directories
 
+* ensure valid URLs are created even when deployed at sub-path (compute_public_url?)
