support for unit-testing file_column enabled models
git-svn-id: http://opensvn.csie.org/rails_file_column/plugins/file_column/trunk@58 6a5db2c9-b104-0410-84e5-917aad89f9d9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,6 +20,7 @@
       root URL. This is so, because rails' image_tag helper will automatically
       convert it to an absolute URL. If you need an absolute URL (e.g., to pass
       it to link_to) use url_for_file_column's :absolute => true option.
+    * added support for file_column enabled models [Manuel Holtgrewe]
 
 0.3.1
     * make object with file_columns serializable
