:magick columns can ignore non-image files
git-svn-id: http://opensvn.csie.org/rails_file_column/plugins/file_column/trunk@64 6a5db2c9-b104-0410-84e5-917aad89f9d9

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -23,6 +23,8 @@
     * added support for file_column enabled unit tests [Manuel Holtgrewe]
     * support for custom transformation of images [Frederik Fix]
     * allow setting of image attributes (e.g., quality) [Frederik Fix]
+    * :magick columns can optionally ignore non-images (i.e., do not try to
+       resize them)
 
 0.3.1
     * make object with file_columns serializable
